@@ -1,0 +1,18 @@
+#' List of Internet Slang and Corresponding Meanings
+#'
+#' A dataset containing Internet slang terms and corresponding meaning.  The data
+#' set is an augmented version of \url{http://www.smart-words.org/abbreviations/text.html}.
+#'
+#' @details
+#' \itemize{
+#'   \item x. The slang term.
+#'   \item y. The meaning.
+#' }
+#'
+#' @docType data
+#' @keywords datasets
+#' @name hash_internet_slang
+#' @usage data(hash_internet_slang)
+#' @format A data frame with 175 rows and 2 variables
+#' @references \url{http://www.smart-words.org/abbreviations/text.html}
+NULL
